objects/Womens_Health__c.object
<CustomObject>
    <description>survey for marketing cloud</description>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WOMs</relationshipLabel>
        <relationshipName>Womens_Healths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_take_hormone__c</fullName>
        <description>Do you currently take – or did you previously take – hormone replacement therapy?</description>
        <label>WOM_v1.0.5</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_used_hormonal__c</fullName>
        <description>Have you ever used hormonal contraception? For example: birth control pills, birth control patch, ring, implant, hormone-containing IUD, or injection.</description>
        <label>WOM_v1.0.1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_had_one_or_both_of_your_ovaries__c</fullName>
        <description>Have you had one or both of your ovaries removed (known in medical terms as an “oophorectomy”)?</description>
        <label>WOM_v1.0.9</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_had_part_or_all_of_your_uterus__c</fullName>
        <description>Have you had part or all of your uterus removed (known in medical terms as a “hysterectomy”)?</description>
        <label>WOM_v1.0.11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Other (please specify):</description>
        <label>WOM_v1.0.4</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_estimate_in_years_how_long_you__c</fullName>
        <description>Please estimate in years how long you have been taking (or how long you took) hormone replacement therapy:</description>
        <label>WOM_v1.0.6</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_estimate_in_years_how_long_you_to__c</fullName>
        <description>Please estimate in years how long you took or have been taking hormonal birth control:</description>
        <label>WOM_v1.0.2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_brand_of_hormone_replacement__c</fullName>
        <description>What brand of hormone replacement therapy do/did you take?</description>
        <label>WOM_v1.0.7</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_dose_of_hormone_replacement_therapy__c</fullName>
        <description>What dose of hormone replacement therapy do/did you take?</description>
        <label>WOM_v1.0.8</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_hormonal_birth_control__c</fullName>
        <description>What hormonal birth control (if any) were you taking at the time you took the MindCrowd memory test online?</description>
        <label>WOM_v1.0.3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_year_did_you_have_your_hysterectomy__c</fullName>
        <description>What year did you have your hysterectomy?</description>
        <label>WOM_v1.0.12</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_year_did_you_have_your_oophorectomy__c</fullName>
        <description>What year did you have your oophorectomy? If you had two separate oophorectomies, please indicate the most recent surgery year.</description>
        <label>WOM_v1.0.10</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>WOM</label>
    <nameField>
        <displayFormat>WOM-{0000000000}</displayFormat>
        <label>WOM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>